# docassemble-MATCChildCareOrCustodyDisclosureAffidavit

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
docassemble/MATCChildCareOrCustodyDisclosureAffidavit/: care_and_custody.py
docassemble/MATCChildCareOrCustodyDisclosureAffidavit/data/questions/: affidavit_disclosing_care_or_custody.yml  main_childcare_or_custody_disclosure_affidavit.yml
docassemble/MATCChildCareOrCustodyDisclosureAffidavit/data/sources/: generated.feature
docassemble/MATCChildCareOrCustodyDisclosureAffidavit/data/templates/: child_care_or_custody_disclosure_affidavit_next_steps.docx
